replacing long post scrolling with show more btn funcitonality, and trying to fix modal display on mobile , editing meta tags

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ button[disabled] {
 body.modal-open {
   position: fixed;
   overflow: hidden;
+  max-height: 100vh;
 }
 
 code {
